<resources>
    <string name="app_name">NeWork</string>
    <string name="events">Events</string>
    <string name="posts">Posts</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="media">Media</string>
    <string name="author_current_job_place">Author current job place</string>
    <string name="event_author_name">Event author name</string>
    <string name="job_place">Job place</string>
    <string name="search">Search</string>
    <string name="add_button_event">Add button event</string>
    <string name="event">event</string>
    <string name="tab_ic_calendar">Calendar</string>
    <string name="user_s_events">user\'s events</string>
    <string name="user_s_posts">user\'s posts</string>
    <string name="user_s_jobs">user\'s jobs</string>
    <string name="company">Company:</string>
    <string name="position">Position: </string>
    <string name="started">Started:</string>
    <string name="finished">Finished:</string>
    <string name="currently_working">Currently working</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="saved">Saved</string>
    <string name="creator">Creator</string>
    <string name="coordinates">Coordinates:</string>
    <string name="date_and_time">Date and time:</string>
    <string name="type">Type:</string>
    <string name="link">Link:</string>
    <string name="_11_10_2015" translatable="false">11.10.2015</string>
    <string name="event_content">Event content:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="online_event">ONLINE event</string>
    <string name="clear">Clear</string>
    <string name="add_button" translatable="false">Add button</string>
    <string name="post_content">Post content:</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="sing_in">SING IN</string>
    <string name="sing_up">SING UP</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="user_name">User name:</string>
    <string name="registration">REGISTRATION</string>
    <string name="all_fields_must_be_filled">All fields must be filled!</string>
    <string name="mismatch_password">Mismatch password!</string>
    <string name="check_network_connection">Check network connection!</string>
    <string name="no_speakers_presented">No speakers presented!</string>
    <string name="only_for_autorized_users_would_you_like_to_sing_in">Only for autorized users! Would you like to Sing In?</string>
    <string name="current_location">Current location</string>
    <string name="minus_zoom">Minus zoom</string>
    <string name="plus_zoom">Plus zoom</string>
    <string name="content_must_be_filled">Content must be filled!</string>
    <string name="all_fields_should_be_filled">All fields should be filled!</string>
    <string name="id_null" translatable="false">Null!</string>
    <string name="error_loading" translatable="false">Error loading!</string>
    <string name="nothing_to_play" translatable="false">Nothing to play</string>
    <string name="create_job_to_get_list">Create job to get list</string>
    <string name="check_internet_connection">Check internet connection!</string>
    <string name="create_event_to_get_list">Create event to get list</string>
    <string name="create_post_to_view_list">Create post to view list</string>
    <string name="no_one_liked_it">No one liked it</string>
    <string name="no_one_going_to_participate">No one going to participate</string>
    <string name="nobody_mentioned">Nobody mentioned!</string>
    <string name="offline_event">OFFLINE event</string>
    <string name="save">Save</string>
    <string name="only_post_owner_can_mention_users">Only post owner can mention users!</string>
    <string name="fill_me">Fill me!</string>
    <string name="later">Later</string>
    <string name="go">Go</string>
    <string name="wrong_login_or_password">Wrong login or password!</string>
    <string name="format">Format:</string>
    <string name="offline">Offline</string>
    <string name="post">POST</string>
    <string name="job">JOB</string>
    <string name="authentication">AUTHENTICATION</string>
</resources>