<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/plus_zoom"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/plus"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/minus_zoom"
        app:layout_constraintBottom_toTopOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/minus"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/current_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/location"/>

</androidx.constraintlayout.widget.ConstraintLayout>